apps/production/foundry/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry
  namespace: foundry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - &host foundry.fanen.dk
      secretName: foundry-fanen-dk-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foundry
                port:
                  name: http-foundry
