apps/production/foundry/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-route
  namespace: foundry
spec:
  hostnames:
    - foundry.fanen.dk
